# muster-hub

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  architecture.puml  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml  server.toml  workflow.puml
.cargo/: audit.toml  config.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-create.sh
.github/actions/setup-deps/: action.yml
.github/workflows/: ci.yml
apps/desktop/: Cargo.toml  Dioxus.toml  README.md
apps/desktop/src/: lib.rs  main.rs
apps/server/: Cargo.toml  README.md
apps/server/src/: lib.rs  main.rs  router.rs
apps/shell/: Cargo.toml
apps/shell/src/: main.rs
assets/icons/: bootstrap-icons.css
crates/features/audit/: Cargo.toml  README.md
crates/features/audit/migrations/: 0000-init.surql
crates/features/audit/src/: error.rs  lib.rs
crates/features/auth/: Cargo.toml  README.md
crates/features/auth/src/: error.rs  lib.rs
crates/features/iam/: Cargo.toml
crates/features/iam/migrations/: 0000-init.surql
crates/features/iam/src/: error.rs  lib.rs
crates/features/iam/tests/: integration.rs
crates/features/identity/: Cargo.toml  README.md
crates/features/identity/migrations/: 0000-init.surql
crates/features/identity/src/: error.rs  lib.rs
crates/features/identity/tests/: init.rs  integration.rs
crates/features/licensing/: Cargo.toml  README.md
crates/features/licensing/src/: constraints.rs  error.rs  generator.rs  lib.rs  validator.rs
crates/features/licensing/tests/: integration.rs
crates/features/organization/: Cargo.toml  README.md
crates/features/organization/migrations/: 0000-init.surql
crates/features/organization/src/: error.rs  lib.rs
crates/mhub/: Cargo.toml  README.md
crates/mhub/src/: lib.rs
crates/shared/domain/: Cargo.toml  README.md
crates/shared/domain/src/: config.rs  constants.rs  entity.rs  features.rs  lib.rs
crates/shared/domain/tests/: config.rs  constants.rs  entities.rs
crates/shared/kernel/: Cargo.toml  README.md
crates/shared/kernel/src/: error.rs  lib.rs  prelude.rs
crates/shared/kernel/src/api/: health.rs  mod.rs  router.rs  state.rs
crates/shared/kernel/src/config/: mod.rs
crates/shared/kernel/src/security/: resource.rs
crates/shared/kernel/src/server/: health.rs  mod.rs  router.rs  state.rs
crates/shared/kernel/src/system/: mod.rs  registry.rs
crates/shared/kernel/src/system/licensing/: constraints.rs  error.rs  mod.rs  models.rs  validator.rs
crates/shared/kernel/tests/: resource_guard.rs  safe_nanoid.rs
docs/: architecture.d2  architecture.puml
infra/database/: Cargo.toml  README.md
infra/database/migrations/: 0000-init.surql
infra/database/src/: auth.rs  error.rs  lib.rs  migrations.rs
infra/database/tests/: integration.rs
infra/db/: Cargo.toml
infra/db/src/: error.rs  lib.rs
infra/derive/: Cargo.toml  README.md
infra/derive/src/: lib.rs
infra/derive/src/macros/: api.rs  error.rs  mod.rs  runtime.rs  slice.rs  tagged.rs  vault.rs
infra/derive/tests/: mhub_error.rs
infra/derive/tests/ui/: mhub_error_bad_context_type.rs  mhub_error_bad_context_type.stderr  mhub_error_no_context.rs  mhub_error_no_context.stderr  mhub_error_pass.rs  mhub_error_tuple_variant.rs  mhub_error_tuple_variant.stderr
infra/dev-gateway/: Cargo.toml
infra/dev-gateway/src/: lib.rs
infra/events/: Cargo.toml  README.md
infra/events/src/: bus.rs  error.rs  lib.rs  receiver.rs
infra/events/tests/: integration.rs
infra/events/tests/fixtures/: mod.rs
infra/logger/: Cargo.toml  README.md  build.rs
infra/logger/src/: error.rs  lib.rs  otlp.rs
infra/logger/tests/: console_only.rs  file_logging.rs  init_twice.rs
infra/runtime/: Cargo.toml  README.md
infra/runtime/src/: lib.rs
infra/storage/: Cargo.toml  README.md
infra/storage/benches/: storage.rs
infra/storage/src/: builder.rs  engine.rs  error.rs  lib.rs  maintenance.rs  namespace.rs  security.rs
infra/storage/tests/: integration.rs
infra/vault/: Cargo.toml  README.md
infra/vault/benches/: vault.rs
infra/vault/src/: builder.rs  engine.rs  error.rs  extensions.rs  lib.rs  protected_field.rs  types.rs
infra/vault/tests/: api.rs  integration.rs  property.rs
infra/vault/tests/fixtures/: mod.rs
ops/docker/mhub-dev/: docker-compose.yml
ops/tailwind/: desktop.config.js
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
xtask/src/handlers/: apps.rs  bench.rs  codegen.rs  dev.rs  features.rs  libs.rs  license.rs  mod.rs  profiling.rs  run.rs  setup.rs  testing.rs
xtask/src/models/: args.rs  keyset.rs  mod.rs
xtask/src/services/: docker.rs  licensing.rs  mod.rs  utils.rs
xtask/templates/app/: Cargo.toml
xtask/templates/app/src/: lib.rs  main.rs
xtask/templates/feature/: Cargo.toml
xtask/templates/feature/src/: error.rs  lib.rs
xtask/templates/feature/tests/: integration.rs
xtask/templates/lib/: Cargo.toml
xtask/templates/lib/src/: error.rs  lib.rs
