[workspace]
resolver = "3"
members = [
    # Applications
    "apps/*",
    # Features (vertical slices)
    "crates/features/*",
    # Shared libraries
    "crates/shared/*",
    # Facade
    "crates/mhub",
    # Infrastructure
    "infra/*",
    # Tooling
    "xtask"
]
exclude = []
default-members = ["apps/server", "apps/shell"]

[workspace.package]
edition = "2024"
version = "0.0.0"
rust-version = "1.93.0"
description = "MusterHub"
keywords = ["musterhub", "education", "training", "modular", "platform"]
authors = ["Anatolii Shliakhto <a.shlyakhto@gmail.com>"]
repository = "https://github.com/AnatoliiShliakhto/muster-hub"
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = false

[profile.dev]
opt-level = 0       # Fast compilation for YOUR code
debug = true
split-debuginfo = "unpacked"

# Optimize heavy dependencies even in dev to make the app snappy
[profile.dev.package."*"]
opt-level = 2

# Keep these at 3 because they are slow otherwise
[profile.dev.package.surrealdb]
opt-level = 3
[profile.dev.package.tokio]
opt-level = 3
# Keep that at 0 for fast compiling
[profile.dev.package.xtask]
opt-level = 0

[profile.release]
opt-level = 3           # Optimization level
lto = "thin"            # Full Link Time Optimization across all crates
codegen-units = 1       # Reduces parallelism for better binary optimization
panic = "abort"         # Reduces binary size by removing stack unwinding
strip = "symbols"       # Automatically removes debug symbols (reduces size by ~20-40%)
debug = false

[profile.release.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"

[patch.'crates-io']
#gix-date = "=0.12.1"

[workspace.metadata]
features = [
    { name = "server", description = "Axum REST API with OpenAPI endpoints", required = false },
    { name = "client", description = "Dioxus UI and frontend components", required = false },
    { name = "full", description = "Enable all non-profiling workspace features", required = false },
    { name = "profiling", description = "Enable tokio-console and DHAT profiling hooks", required = false },
    { name = "mhub-database/storage-rocksdb", description = "Use RocksDB-backed local storage", required = false },
    { name = "mhub-database/storage-tikv", description = "Use TiKV database cluster", required = false },
    { name = "mhub-license/issuance", description = "Enable license issuance and generation flows", required = false },
    { name = "mhub-logger/opentelemetry", description = "Enable OpenTelemetry tracing integration", required = false },
    { name = "mhub-logger/opentelemetry-otlp", description = "Enable OTLP exporter (SDK + gRPC pipeline)", required = false },
]

[workspace.dependencies]
# Presentation level (Apps)
mhub-server = { path = "apps/server" }
mhub-desktop = { path = "apps/desktop" }
mhub-shell = { path = "apps/shell" }

# Unified Platform Facade (Primary entry point for all applications)
mhub = { path = "crates/mhub" }

# Shared
mhub-domain = { path = "crates/shared/domain" }
mhub-kernel = { path = "crates/shared/kernel" }

# Infrastructure
mhub-database = { path = "infra/database" }
mhub-derive = { path = "infra/derive" }
mhub-event-bus = { path = "infra/events" }
mhub-logger = { path = "infra/logger" }
mhub-runtime = { path = "infra/runtime" }
mhub-storage = { path = "infra/storage" }
mhub-vault = { path = "infra/vault" }

# Features
mhub-licensing = { path = "crates/features/licensing" }
mhub-audit = { path = "crates/features/audit" }
mhub-organization = { path = "crates/features/organization" }
mhub-identity = { path = "crates/features/identity" }
mhub-iam = { path = "crates/features/iam" }

## Workspace dependencies
anyhow = "1.0.101"
axum = { version = "0.8.8", default-features = false }
axum-server = { version = "0.8.0", default-features = false }
bitflags = { version = "2.10.0", features = ["serde"] }
chrono = "0.4.43"
config = "0.15.19"
dioxus = { version = "0.7.3", default-features = false }
fxhash = "0.2.1"
lz4_flex = "0.12.0"
moka = { version = "0.12.13", default-features = false, features = ["sync"] }
opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry-otlp = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.31.0", default-features = false }
parking_lot = "0.12.5"
postcard = "1.1.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
surrealdb = { version = "3.0.0-beta.3", default-features = false }
surrealdb-types = "3.0.0-beta.3"
thiserror = "2.0.18"
tokio = { version = "1.49.0", default-features = false }
tower = "0.5.3"
tower-http = { version = "0.6.8", default-features = false }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-opentelemetry = { version = "0.32.1", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false }
typed-builder = "0.23.2"
utoipa = { version = "5.4.0", default-features = false }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", default-features = false }
walkdir = "2.5.0"
strum = "0.27.2"
strum_macros = "0.27.2"
hex = "0.4.3"
hex-literal = "1.1.0"

## Security
aead = { version = "0.6.0-rc.10", default-features = false }
aes-gcm = { version = "0.11.0-rc.3", default-features = false }
base64 = "0.22.1"
chacha20poly1305 = { version = "0.11.0-rc.3", default-features = false }
jsonwebtoken = "10.3.0"
ed25519-dalek = { version = "3.0.0-pre.6", default-features = false }
getrandom = "0.4.1"
hkdf = "0.13.0-rc.5"
machineid-rs = "1.2.4"
nanoid = "0.4.0"
sha2 = { version = "0.11.0-rc.5", default-features = false }
zeroize = { version = "1.8.2", default-features = false }

## Dev dependencies
assert_cmd = "2.1.2"
cargo-generate = "0.23.7"
clap = { version = "4.5.57", features = ["derive"] }
console-subscriber = "0.5.0"
criterion = { version = "0.8.2", features = ["async_tokio"] }
dhat = "0.3.3"
predicates = "3.1.3"
proc-macro2 = "1.0.106"
proptest = "1.10.0"
quote = "1.0.44"
serial_test = "3.3.1"
syn = { version = "2.0.114", features = ["full", "parsing"] }
tempfile = "3.24.0"
toml = "0.9.11"
trybuild = "1.0.115"

[workspace.lints.rust]
# remember to update RUSTFLAGS in ci.yml if you add something here
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
unsafe_code = "forbid"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
missing_debug_implementations = "warn" # Every struct in the domain should be Debug
unreachable_pub = "warn" # Helps identify code that doesn't need to be public
#unused_crate_dependencies = "warn"

[workspace.lints.clippy]
## lint groups
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

## allow the following lints
redundant_pub_crate = "allow"
too_long_first_doc_paragraph = "allow"
single_match = "allow"
result_unit_err = "allow"
len_without_is_empty = "allow"
enum_variant_names = "allow"
new_ret_no_self = "allow"
useless_asref = "allow"
assigning_clones = "allow"
vec_init_then_push = "allow"
literal_string_with_formatting_args = "allow"
unnecessary_map_or = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
wrong_self_convention = "allow"
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"
rc_buffer = "warn"
str_to_string = "warn"
