[package]
name = "xtask"
publish = false
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mhub-licensing = { workspace = true, features = ["issuance"] }
anyhow.workspace = true
cargo-generate.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
postcard.workspace = true

[lints]
workspace = true