[package]
name = "mhub-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
mhub = { workspace = true, features = ["server"] }
mhub-database.workspace = true
mhub-runtime.workspace = true
mhub-logger.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
axum-server.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true
tower-http.workspace = true

[[bin]]
name = "mhub-server"
path = "src/main.rs"

[lints]
workspace = true
