[package]
name = "muster-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
muster-core.workspace = true

[[bin]]
name = "muster"
path = "src/main.rs"

[lints]
workspace = true