[package]
name = "mhub"
description = "Feature Gateway Crate"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

# Platform features
api = [
    "mhub-kernel/api",
    "mhub-auth/api",
    # "mhub-exam/api",
    # "mhub-survey/api",
]
ui = [
    "mhub-kernel/ui",
    "mhub-auth/ui",
    # "mhub-exam/ui",
    # "mhub-survey/ui",
]

# Optional features (can be disabled at compile time)
full = ["auth"]
auth = ["dep:mhub-auth"]

[dependencies]
mhub-kernel.workspace = true
mhub-domain.workspace = true
mhub-auth = { workspace = true, optional = true }

anyhow.workspace = true

[lints]
workspace = true
