[package]
name = "mhub-database"
description = "Database infrastructure layer providing SurrealDB integration"
keywords = ["database", "surrealdb", "infrastructure", "storage", "rocksdb"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[features]
default = []
storage-rocksdb = ["surrealdb/kv-rocksdb"]
full = ["default", "storage-rocksdb"]

[dependencies]
mhub-derive.workspace = true

surrealdb = { workspace = true, features = ["kv-mem", "http", "protocol-ws", "protocol-http", "rustls"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[lib]
name = "mhub_database"
path = "src/lib.rs"

[lints]
workspace = true
