[package]
name = "mhub-db"
description = "Database infrastructure layer providing SurrealDB integration"
keywords = ["database", "surrealdb", "infrastructure", "storage", "rocksdb"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
surrealdb = { workspace = true, features = ["kv-rocksdb", "http", "kv-mem", "rustls"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[lints]
workspace = true
