[package]
name = "mhub-logger"
description = "Logging infrastructure for a project using tracing and tracing-subscriber with file appender support"
keywords = ["logging", "tracing", "infrastructure", "appender", "subscriber"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
mhub-derive.workspace = true

thiserror.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true

[lints]
workspace = true
