[package]
name = "muster-runtime"
description = "It's a new library muster-runtime"
keywords = []
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true

[lints]
workspace = true