[package]
name = "mhub-runtime"
description = "Specialized async runtime wrapper with performance profiles"
keywords = ["runtime", "tokio", "async", "performance", "bootstrap"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[features]
default = []
full = ["default"]

[dependencies]
mhub-derive.workspace = true

anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tracing.workspace = true

[lib]
name = "mhub_runtime"
path = "src/lib.rs"

[lints]
workspace = true