[package]
name = "mhub-storage"
description = "It's a new library mhub-storage"
keywords = []
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
mhub-derive.workspace = true

thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true