[package]
name = "mhub-vault"
description = "It's a new library mhub-vault"
keywords = []
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chacha20poly1305 = "0.11.0-rc.2"
aes-gcm = { workspace = true, features = ["aes", "rand_core", "getrandom"] }
lz4_flex.workspace = true
sha2.workspace = true
hkdf.workspace = true
zeroize.workspace = true
rand = { workspace = true, features = ["thread_rng"]}

[lints]
workspace = true