[package]
name = "mhub-vault"
description = "Secure vault library for encryption, decryption, and key derivation using ChaCha20-Poly1305 and AES-GCM"
keywords = ["vault", "encryption", "security", "aes", "chacha20"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
mhub-derive.workspace = true
aes-gcm = { workspace = true, features = ["aes", "rand_core", "getrandom"] }
chacha20poly1305.workspace = true
hkdf.workspace = true
lz4_flex.workspace = true
rand = { workspace = true, features = ["thread_rng"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true